<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <!-- ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
    <ImageView
        android:id="@+id/main_action_bar_placeholder"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="#00E676"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layout_control"
        android:layout_marginBottom="12dp"
        android:background="#00E676"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_notice"
            android:textColor="#ffffff"
            android:textIsSelectable="false"
            android:visibility="visible" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/id_adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-6226297024177922/7356020348" />
    </LinearLayout>

    <ImageView
        android:id="@+id/main_bg_snow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/layout_header"
        android:background="@mipmap/bg_snow"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_above="@+id/layout_alipay"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_control_community"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.35"
            android:background="#ffffff"
            android:orientation="vertical"
            android:textColor="#858585"
            android:textSize="20sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_community" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/community"
                android:textColor="#858585"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_control_accessibility"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:background="#ffffff"
            android:orientation="vertical"
            android:textColor="#858585"
            android:textSize="20sp">

            <ImageView
                android:id="@+id/layout_control_accessibility_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@mipmap/ic_start"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/layout_control_accessibility_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/service_on"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_control_settings"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="0.35"
            android:background="#ffffff"
            android:orientation="vertical"
            android:textColor="#858585"
            android:textSize="20sp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_settings" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/settings"
                android:textColor="#858585"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_alipay"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:visibility="invisible">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="24dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_version" />

    </LinearLayout>
</RelativeLayout>
